# DLER

./: README.md  build.bat  build_basic.py  build_ultimate.py  dler_telegram.ps1  dler_tk.spec  pyproject.toml  requirements.txt  runtime_hook_basic.py  runtime_hook_ultimate.py  tk_main.py  tune.py  version_info.py
src/: __init__.py
src/core/: __init__.py  adaptive_extractor.py  fast_nntp.py  file_verification.py  mp_engine.py  nzb_parser.py  par2_database.py  post_processor.py  post_script.py  ram_7z.py  ram_processor.py  ram_rar.py  turbo_engine_v2.py  turbo_yenc.py  watch_folder.py
src/gui/: __init__.py  speed_graph.py  system_tray.py  tkinter_app.py
src/native/: README.md  ram_rar.cp314-win_amd64.pyd  setup.py  yenc_turbo.cp314-win_amd64.pyd  yenc_turbo.cpp
src/utils/: __init__.py  config.py
