[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dler"
version = "1.0.4"
description = "High-performance NZB downloader with elegant TUI for Windows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["nzb", "usenet", "downloader", "nntp", "windows"]
authors = [{ name = "dler" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
]
dependencies = [
    "aiofiles>=23.2.1",
    "rich>=13.7.0",
    "textual>=0.47.0",
    "lxml>=5.1.0",
    "msgpack>=1.0.7",
    "orjson>=3.9.0",
    "numpy>=1.26.0",
    "diskcache>=5.6.0",
    # PySide6 GUI dependencies
    "PySide6>=6.6.0",
    "qasync>=0.27.0",
    "pyqtgraph>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "black", "ruff", "mypy"]

[project.scripts]
dler = "dler.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
